--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -19,4 +19,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BenWilson295nTermProject\BenWilson295nTermProject.csproj" />
+  </ItemGroup>
+
 </Project>
