--- a/.gitignore
+++ b/.gitignore
@@ -325,6 +325,9 @@ __pycache__/
 # OpenCover UI analysis results
 OpenCover/
 
+# Cover AppSettings
+appsettings.*
+
 # Azure Stream Analytics local run output
 ASALocalRun/
 
